added sections and footer

--- a/html/index.html
+++ b/html/index.html
@@ -51,16 +51,46 @@
     </div>
     <!-- end of navbar -->
 
-    <!-- start of start button -->
+    <!-- start of title -->
     <h1 id="banner-title">The Galleria</h1>
+    <!-- end of title -->
 
-    <!-- end of start button -->
+    <button id="start-btn" type="button" class="btn">Find Locations</button>
 
-    <div class="box">
+    <div id="section1">
+      <div id="aboutus" class="section-header-div">
+        <h2 class="section-header">About us</h2>
+      </div>
+      <div class="content-container">
 
+      </div>
     </div>
 
+    <div id="section2">
+      <div id="contactus"class="section-header-div">
+        <h2 class="section-header">Contact us</h2>
+      </div>
+      <div class="content-container">
 
+      </div>
+    </div>
+
+    <footer>
+      <div id="footer-div">
+        <div id="social-div">
+          Social
+        </div>
+        <div id="navigation-div">
+          Navigation
+        </div>
+        <div id="footer-aboutus-div">
+          About us
+        </div>
+
+
+      </div>
+      <p>Copyright</p>
+    </footer>
 
 
 
