--- a/html/index.html
+++ b/html/index.html
@@ -68,7 +68,7 @@
 
     <div id="section2">
       <div id="contactus"class="section-header-div">
-        <h2 class="section-header">Contact us</h2>
+        <h2 class="section-header">Suggestions</h2>
       </div>
       <div class="content-container">
 
@@ -77,19 +77,23 @@
 
     <footer>
       <div id="footer-div">
-        <div id="social-div">
-          Social
+        <div id="social-div" class="col-3">
+          <h6 id="social-header-text">Socials</h6>
+          <div id="social-icons-div">
+            
+          </div>
         </div>
-        <div id="navigation-div">
-          Navigation
+        <div id="navigation-div" class="col-3">
+          <h6 id="navigation-header-text">Navigation</h6>
         </div>
-        <div id="footer-aboutus-div">
-          About us
+        <div id="footer-aboutus-div" class="col-6">
+          <h6 id="aboutus-header-text">About Us</h6>
         </div>
-
-
       </div>
-      <p>Copyright</p>
+      <div id="copyright-div">
+        <p id="copyright-text">&copy; 2022 The Galleria, Inc</p>
+      </div>
+      
     </footer>
 
 
