added social icons to footer

--- a/html/index.html
+++ b/html/index.html
@@ -80,7 +80,11 @@
         <div id="social-div" class="col-3">
           <h6 id="social-header-text">Socials</h6>
           <div id="social-icons-div">
-            
+            <img class="social-icons" src="../images/facebook.png">
+            <img class="social-icons" src="../images/instagram.png">
+            <img class="social-icons" src="../images/twitter.png">
+            <img class="social-icons" src="../images/pinterest.png">
+            <img class="social-icons" src="../images/linkedin.png">
           </div>
         </div>
         <div id="navigation-div" class="col-3">
