added links for sitemap in footer

--- a/html/index.html
+++ b/html/index.html
@@ -57,6 +57,8 @@
 
     <button id="start-btn" type="button" class="btn">Find Locations</button>
 
+
+    <!-- start of section 1 : about us -->
     <div id="section1">
       <div id="aboutus" class="section-header-div">
         <h2 class="section-header">About us</h2>
@@ -66,14 +68,19 @@
       </div>
     </div>
 
+    <!-- end of section 1: about us -->
+
+    <!-- start of section 2: suggestions -->
     <div id="section2">
-      <div id="contactus"class="section-header-div">
+      <div id="suggestions"class="section-header-div">
         <h2 class="section-header">Suggestions</h2>
       </div>
       <div class="content-container">
 
       </div>
     </div>
+
+    <!-- end of section 2: suggestions -->
 
     <footer>
       <div id="footer-div">
@@ -89,6 +96,9 @@
         </div>
         <div id="navigation-div" class="col-3">
           <h6 id="navigation-header-text">Navigation</h6>
+          <a href="#navbar"><p class="navigation-link">Home</p></a>
+          <a href="#aboutus"><p class="navigation-link">About Us</p></a>
+          <a href="#suggestions"><p class="navigation-link">Suggestions</p></a>
         </div>
         <div id="footer-aboutus-div" class="col-6">
           <h6 id="aboutus-header-text">About Us</h6>
@@ -97,7 +107,6 @@
       <div id="copyright-div">
         <p id="copyright-text">&copy; 2022 The Galleria, Inc</p>
       </div>
-      
     </footer>
 
 
