added aboutus section in footer

--- a/html/index.html
+++ b/html/index.html
@@ -101,7 +101,15 @@
           <a href="#suggestions"><p class="navigation-link">Suggestions</p></a>
         </div>
         <div id="footer-aboutus-div" class="col-6">
-          <h6 id="aboutus-header-text">About Us</h6>
+          <h6 id="aboutus-footer-header">About Us</h6>
+          <div id="aboutus-footer-text-div">
+            <span id="aboutus-footer-text">
+              The Galleria is a passion project to increase the 
+               ease of finding scenic locations for photographers!
+               Let's capture the beauty of mother nature together!
+               
+            </span>
+          </div>
         </div>
       </div>
       <div id="copyright-div">
