added fade-in css animation

--- a/html/index.html
+++ b/html/index.html
@@ -64,7 +64,9 @@
         <h2 class="section-header">About us</h2>
       </div>
       <div class="content-container">
-
+        <h1 class="test">The Galleria</h1>
+        <p>The Galleria is a passion project.</p>
+        <span>hello</span>
       </div>
     </div>
 
@@ -107,13 +109,12 @@
               The Galleria is a passion project to increase the 
                ease of finding scenic locations for photographers!
                Let's capture the beauty of mother nature together!
-               
             </span>
           </div>
         </div>
       </div>
       <div id="copyright-div">
-        <p id="copyright-text">&copy; 2022 The Galleria, Inc</p>
+        <p id="copyright-text">&copy; 2022. All rights reserved. The Galleria.</p>
       </div>
     </footer>
 
