--- a/html/index.html
+++ b/html/index.html
@@ -64,9 +64,19 @@
         <h2 class="section-header">About us</h2>
       </div>
       <div class="content-container">
-        <h1 class="test">The Galleria</h1>
-        <p>The Galleria is a passion project.</p>
-        <span>hello</span>
+        <div class="animation-wrapper">
+          <h1 class="content-container-inner">The Galleria</h1>
+        </div>
+        <div class="animation-wrapper">
+          <p class="content-container-inner"> 
+            The Galleria is a passion project by photographers for photographers!
+            Have you ever wondered where you can find scenic locations to build your 
+            portfolio?
+            Look no further!
+            The Galleria is a web application that 
+
+          </p>
+        </div>
       </div>
     </div>
 
