added datagov map instead of leaflet

--- a/html/index.html
+++ b/html/index.html
@@ -158,9 +158,9 @@
   <!-- end of main-page -->
 
   <!-- start of map-page -->
-  <div id="map-page" class="initial-hide">
+  <div id="map-page" class="initial-hide" >
     <button id="back-btn"class="btn btn-primary">Back</button>
-    <div id="map" style="height: 100vh"></div>
+    <iframe style="height:100vh;width:100vw" src="https://data.gov.sg/dataset/nparks-parks/resource/a92ea763-d132-4dcc-9827-378e65577554/view/c94706b9-3ce3-4af6-b8da-1f1fa95374e5" frameBorder="0"> </iframe>
     
   </div>
   
