added scroll up button

--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,12 @@
   <!-- start of main-page -->
   <div id="main-page">
 
-  
+  <!-- start of scroll up button -->
+  <a id="fixedbutton" class="animation-wrapper" href="#navbar">
+    <img id="scroll-up-icon" style="display:none;"src="../images/arrow-up.png">
+  </a>
+  <!-- end of scroll up button -->
+
     <!-- start of navbar -->
     <div id="navbar">
         <nav class="navbar navbar-expand-lg navbar-light">
