--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
   <!-- start of map-page -->
   <div id="map-page" class="initial-hide" >
     <button id="back-btn"class="btn btn-primary">Back</button>
-    <iframe style="height:100vh;width:100vw" src="https://data.gov.sg/dataset/nparks-parks/resource/a92ea763-d132-4dcc-9827-378e65577554/view/c94706b9-3ce3-4af6-b8da-1f1fa95374e5" frameBorder="0"> </iframe>
-    
+    <!-- <iframe style="height:100vh;width:100vw" src="https://data.gov.sg/dataset/nparks-parks/resource/a92ea763-d132-4dcc-9827-378e65577554/view/c94706b9-3ce3-4af6-b8da-1f1fa95374e5" frameBorder="0"> </iframe> -->
+    <iframe src="https://www.google.com/maps/d/embed?mid=1YRjlaCZe1YQtuYZpQbYKrseq_w9acwkg&ehbc=2E312F" width="100vw" height="100vh"></iframe>
   </div>
   
 
